loadbalancer-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels: 
    app: my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: lba
  template:
    metadata: 
      labels: 
        project: lba
    spec:
      containers:
        - name : lba-web
          image: antowkabond/k8php:lates
          ports: 
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels: 
    env: dev
    owner: AntonMakarov
spec:
  selector:
    project: lba
  type: LoadBalancer
  ports:
  - name: app-listener
    protocol: TCP
    port: 80 # Port on LB
    targetPort: 80 # Port on pod
